# snake_game

./: Cargo.toml  README.md
.github/workflows/: rust ci.yml
src/: food.rs  game.rs  lib.rs  main.rs  snake.rs
