[package]
name = "snake_game"
version = "0.2.0"
edition = "2021"
author = "PiXinCreate (Pa1NarK)"

[dependencies]
piston2d-opengl_graphics = "0.82.0"
piston2d-graphics = "0.43.0"
piston = "0.53.2"
rand = "0.8.5"

[dependencies.pistoncore-glutin_window]
git = "https://github.com/PistonDevelopers/glutin_window"