[package]
name = "snake_game"
version = "0.2.0"
edition = "2021"
authors = ["PiXinCreate (Pa1NarK)"]
description = "A simple snake game made with Rust and Piston"
readme = "README.md"
keywords = ["snake", "game", "rust", "piston"]
repository = "https://github.com/pixincreate/snake_game"

[dependencies]
piston2d-opengl_graphics = "0.82.0"
piston2d-graphics = "0.43.0"
piston = "0.53.2"
rand = "0.8.5"

[dependencies.pistoncore-glutin_window]
git = "https://github.com/PistonDevelopers/glutin_window"

[[bin]]
name = "snake_xenzia"
path = "src/main.rs"
